--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <i class="fa-brands fa-square-snapchat"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> Dobbelsnap er når man sender to bilde-snapper etter hverandre.
+                        <p> <b>Dobbelsnap</b> er når man sender to bilde-snapper etter hverandre.
                             Normalt er det vanlig å kun sende en om gangen. Dermed er det utenom det vanlige dersom man
                             sender
                             to
@@ -72,7 +72,7 @@
                         <i class="fa-solid fa-mobile-screen-button"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> Halfswiping er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har
+                        <p> <b>Halfswiping</b> er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at du har
                             lest
                             den.
                             Det kalles halfswiping fordi man drar skjermen halveis til siden for å se chatten. </p>
@@ -88,7 +88,7 @@
                         <i class="fa-brands fa-facebook"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p>Stalking vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra
+                        <p><b>Stalking</b> vil i sammenheng med sosiale medier handle om å finne ut ting om en person utifra
                             hva som
                             ligger
                             ute av informasjon om dem på nettet. Sosiale medier og funksjoner som ofte brukes til
@@ -112,7 +112,7 @@
                         <i class="fa-brands fa-tiktok"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> Tiktok er et sosialt medium som står for mange av trendene blant unge i dag. Skal man
+                        <p> <b>Tiktok</b> er et sosialt medium som står for mange av trendene blant unge i dag. Skal man
                             markedsføre en
                             sang i dag er det rette stedet uten tvil tiktok. </p>
                     </div>
@@ -127,7 +127,7 @@
                         <i class="fa-brands fa-snapchat"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> Ghosting er når en person slutter å åpne og svare på meldinger. Begrepet kan brukes når man
+                        <p> <b>Ghosting</b> er når en person slutter å åpne og svare på meldinger. Begrepet kan brukes når man
                             snakker om meldinger/chatter på ulike sosiale medie, ikke bare på meldinger </p>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                         <i class="fa-solid fa-book-open"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> Reading er når man åpner snappen til noen, men ikke svarer. Navnet kommer av at men leser
+                        <p> <b>Reading</b> er når man åpner snappen til noen, men ikke svarer. Navnet kommer av at men leser
                             snappen. Begrepe kan også bli brukt om
                             meldinger
                         </p>
