rettskriving av bokser

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <i class="fa-solid fa-mobile-screen-button"></i>
                     </div>
                     <div class="flip-card-back">
-                        <p> <b>Halfswiping</b> er en funksjon på snappchat hvor man kan lese chatter uten at noen ser at
+                        <p> <b>Halfswiping</b> er en funksjon på snapchat hvor man kan lese chatter uten at noen ser at
                             du har
                             lest
                             den.
@@ -129,7 +129,7 @@
                     <div class="flip-card-back">
                         <p> <b>Tiktok</b> er et sosialt medium som står for mange av trendene blant unge i dag. Skal man
                             markedsføre en
-                            sang i dag er det rette stedet uten tvil tiktok. </p>
+                            sang i dag, er det rette stedet uten tvil tiktok. </p>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                     <div class="flip-card-back">
                         <p> <b>Ghosting</b> er når en person slutter å åpne og svare på meldinger. Begrepet kan brukes
                             når man
-                            snakker om meldinger/chatter på ulike sosiale medie, ikke bare på meldinger </p>
+                            snakker om meldinger/chatter på ulike sosiale medier, ikke bare på meldinger </p>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                     <div class="flip-card-back">
                         <p> <b>Reading</b> er når man åpner snappen til noen, men ikke svarer. Navnet kommer av at men
                             leser
-                            snappen. Begrepe kan også bli brukt om
+                            snappen. Begrepet kan også bli brukt om
                             meldinger
                         </p>
                     </div>
