--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
-<body>
+<body class="uu">
 
     <header>
         <nav>
@@ -19,15 +19,17 @@
         </nav>
     </header>
 
-    <main>
-        <h1> UNIVERSIELL UTFORMING </h1>
-        <h2> Hva er universiell utforming? </h2>
-        <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
-            tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
-            Universiell utforming handler også om hvor tilgjengelig siden er for alle i en målgruppe, og respektere
-            ulike
-            brukeres utgangspunkt som erfaring, kunnskap,
-            språkferdigheter og konsentrasjonsnivå.</p>
+    <main class="UU">
+        <section>
+            <h1> UNIVERSIELL UTFORMING </h1>
+            <h2> Hva er universiell utforming? </h2>
+            <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
+                tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
+                Universiell utforming handler også om hvor tilgjengelig siden er for alle i en målgruppe, og respektere
+                ulike
+                brukeres utgangspunkt som erfaring, kunnskap,
+                språkferdigheter og konsentrasjonsnivå.</p>
+        </section>
 
 
         <section class="boks" id="syn">
@@ -77,7 +79,8 @@
                     Dermed kan de som ser på videoen likevel få med seg hva som blir sagt.
                     Nedsatt hørsel kan få konsekvenser for kommunikasjon og deltakelse. Derfor er det viktig å
                     lage tilgjengelig nettinnhold for personer med nedsatt hørsel. Dette gjøres ved å tekste videoer og
-                    ha transkripsjoner for alt lydinnhold, for eksempel en podkast. Døvblinde bruker skjermleser og leser
+                    ha transkripsjoner for alt lydinnhold, for eksempel en podkast. Døvblinde bruker skjermleser og
+                    leser
                     punktskrift, så de trenger tilgjengelig innhold, inkludert tekstalternativ for bilder.
                 </p>
             </div>
