--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <main class="UU">
+    <main>
         <section>
             <h1> UNIVERSIELL UTFORMING </h1>
             <h2> Hva er universiell utforming? </h2>
