--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="navigation-dots"></div>
 
-        <script src="script.js"></script>
+        <script src="slideshow.js"></script>
     </section>
 
     <main>
