--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <header>
-        <nav>
-            <label class="logo">SoMe</label>
+        <nav>  
             <ul>
+                <li><a href="#">SOME</a></li>
                 <li><a href="universiell_utforming.html">Universiell utforming</a></li>
                 <li><a href="gdpr.html">GDPR</a></li>
                 <li><a href="#">Spill</a></li>
