--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 
 <body>
     <header>
-        <nav>  
-            <ul>
-                <li><a href="#">SOME</a></li>
-                <li><a href="universiell_utforming.html">Universiell utforming</a></li>
-                <li><a href="gdpr.html">GDPR</a></li>
-                <li><a href="#">Spill</a></li>
-            </ul>
+        <nav>
+            <div class="logo">
+                <p><a href="index.html">SoMe</a></p>
+            </div>
+            <div class="right-sections">
+                <ul>
+                    <li><a href="#">Seksjon 1</a></li>
+                    <li><a href="#">Seksjon 2</a></li>
+                    <li><a href="#">Seksjon 3</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
