--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="#">Seksjon 1</a></li>
-                    <li><a href="#">Seksjon 2</a></li>
-                    <li><a href="#">Seksjon 3</a></li>
+                    <li><a href="#">Universell utforming</a></li>
+                    <li><a href="#">GDPR</a></li>
+                    <li><a href="#">Spill</a></li>
                 </ul>
             </div>
         </nav>
