--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="#">Universell utforming</a></li>
-                    <li><a href="#">GDPR</a></li>
+                    <li><a href="universiell_utforming.html">Universell utforming</a></li>
+                    <li><a href="gdpr.html">GDPR</a></li>
                     <li><a href="#">Spill</a></li>
                 </ul>
             </div>
