--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <nav>  
+        <nav>
             <ul>
                 <li><a href="#">SOME</a></li>
                 <li><a href="universiell_utforming.html">Universiell utforming</a></li>
@@ -55,6 +55,19 @@
     </section>
 
     <main>
+        <section id="nettmobbing">
+            <h2> Nettmobbing </h2>
+
+            <p> Siden store deler av livet til barn og unge utspiller seg på nett er nettmobbing blitt et økende
+                problem. Med nettmobbing er ikke mobbingen lenger begrenset til skolegården, men kan foregå døgnet
+                rundt. Ofte kan det også være lettere å mobbe når man ikke står ansikt til ansikt, men kan gjemme seg
+                bak et brukernavn eller være anonym. Konflikter skalerer også raskere på nett. Det er lett å misforstå
+                hverandre, og meldinger og bilder kan bli spredt til mange fort. Nettmobbingen utarter seg ofte i form
+                av trusler, utestenging, hetsing eller deling av intime bilder på nett. I følge elevundersøkelsen fra
+                2018 er det 27 000 elever som opplever nettmobbing. Nettmobbingen skjer ikke utelukkende på sosiale
+                medier, men også når barn og unge spiller sammen. </p>
+
+        </section>
 
         <section id="tuttifrutti">
             <h2>Fenomener på sosiale medier</h2>
@@ -177,33 +190,33 @@
 
     <footer>
         <div id="footer">
-			<div>
-				<h4>Om oss</h4>
-				<p>SoMe ...</p>
-			</div>
-			<div>
-				<h4>Kontakt oss</h4>
-				<div class="FooterContainer">
-					<i class="fa-solid fa-envelope fa-foot"></i>
-					<p>SoMe@mail.com</p>
-					<i class="fa-solid fa-phone fa-foot"></i>
-					<p>+47 123456789</p>
-					<i class="fa-solid fa-house fa-foot"></i>
-					<p>Adresse</p>
-				</div>
-			</div>
-			<div>
-				<h4>Følg oss</h4>
-				<div class="FooterContainer">
-					<i class="fa-brands fa-square-twitter fa-foot"></i>
-					<p>SoMe</p>
-					<i class="fa-brands fa-instagram fa-foot"></i>
-					<p>SoMe</p>
-					<i class="fa-brands fa-facebook fa-foot"></i>
-					<p>SoMe</p>
-				</div>
-			</div>
-		</div>
+            <div>
+                <h4>Om oss</h4>
+                <p>SoMe ...</p>
+            </div>
+            <div>
+                <h4>Kontakt oss</h4>
+                <div class="FooterContainer">
+                    <i class="fa-solid fa-envelope fa-foot"></i>
+                    <p>SoMe@mail.com</p>
+                    <i class="fa-solid fa-phone fa-foot"></i>
+                    <p>+47 123456789</p>
+                    <i class="fa-solid fa-house fa-foot"></i>
+                    <p>Adresse</p>
+                </div>
+            </div>
+            <div>
+                <h4>Følg oss</h4>
+                <div class="FooterContainer">
+                    <i class="fa-brands fa-square-twitter fa-foot"></i>
+                    <p>SoMe</p>
+                    <i class="fa-brands fa-instagram fa-foot"></i>
+                    <p>SoMe</p>
+                    <i class="fa-brands fa-facebook fa-foot"></i>
+                    <p>SoMe</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
