--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Universiell utforming </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="uu_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -34,7 +34,7 @@
 
         <section class="boks" id="syn">
             <div>
-                <h2> Syn </h2>
+                <h3> Syn </h3>
                 <p> For svaksynte er det viktig at nettsiden er oversiktlig med tydelige overskrifter og fordelinger. En
                     tilpasning på nettsider som gjøres for de blinde er å sette inne en "alt"-tagg. Dette innebærer at
                     de
@@ -53,7 +53,7 @@
 
         <section class="boks" id="kontrast">
             <div>
-                <h2> Kontrast </h2>
+                <h3> Kontrast </h3>
                 <p> For at lesere skal få en god oversikt på nettsiden, lønner deg seg og ha kontraster. Bakgrunnsfargen
                     på
                     siden og teksten bør ikke begge ha samme type farge. Det vil si at en hvit bakgunn ikke burde ha en
@@ -74,7 +74,7 @@
 
         <section class="boks" id="lyd">
             <div>
-                <h2> Hørsel </h2>
+                <h3> Hørsel </h3>
                 <p> For de med drålig hørsel på en nettside er et av tilpasningene teksting på filmsnutter og lydklipp.
                     Dermed kan de som ser på videoen likevel få med seg hva som blir sagt.
                     Nedsatt hørsel kan få konsekvenser for kommunikasjon og deltakelse. Derfor er det viktig å
