--- a/erika_prover.html
+++ b/erika_prover.html
@@ -93,17 +93,26 @@
         }
 
         .mobbeoffer {
-            padding: 250px;
-            padding-right: 650px;
-            padding-top: 170px;
+            padding: 100px 780px 300px 120px;
             background-size: cover;
         }
+        
+        .mobbeoffer a {
+            color: blue;
+            text-decoration: none;
+        }
+
         .Guri {
             background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/ece5/tr_2000_2000_s_f/0000/tele/2020/10/12/17/13NYH_01-01-DSC_0599.jpg?chk=A8F5B0);
         }
 
         .jente {
             background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/ece5/tr_2000_2000_s_f/0000/helg/2015/9/15/12/1442312358820.jpg?chk=43D8DF);
+        }
+
+        .Villemo {
+            background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/escenic/tr_2000_2000_s_f/0000/archive/05746/ashighaiodhguoi_s_5746354a.jpg?chk=636FC0);
+            color: white;
         }
     </style>
 </head>
@@ -119,12 +128,22 @@
                     <div class="mobbeoffer Guri">
                         <h2>Mobbeofferet «Guri» (24) forteller sin historie: Ber politikerne ta seg råd til å etablere et mobbeteam</h2>
                         <p>- La oss få et mobbeteam nå. Jeg har etterlyst gode, målretta tiltak mot mobbing etter at jeg selv ble et offer, sier 'Guri' (24), mor til to og opptatt av at mobbing skal og må forebygges best mulig gjennom fagkompetanse.</p>
+                        <a href="https://www.telen.no/mobbeofferet-guri-24-forteller-sin-historie-ber-politikerne-ta-seg-rad-til-a-etablere-et-mobbeteam/s/5-75-430268" target="_">Les mer her.</a>
                     </div>
                 </div>
                 <div class="slide-image">
                     <div class="mobbeoffer jente">
                         <h2>14-åring ble mobbet på Snapchat - Håper jeg får hjelp nå</h2>
                         <p>Utfrysing og nettmobbing har lenge vært en del av hverdagen for 14-åringen fra Sandnessjøen. Nå vil hun ha hjelp.</p>
+                        <p>– Det kan ikke bli verre enn det er.</p>
+                        <a href="https://www.helg.no/nyheter/mobbing/14-aring-ble-mobbet-pa-snapchat-haper-jeg-far-hjelp-na/s/5-24-68194" target="_">Les mer her.</a>
+                    </div>
+                </div>
+                <div class="slide-image">
+                    <div class="mobbeoffer Villemo">
+                        <h2>Villemo (14) hetses etter at hun sto fram som mobbeoffer</h2>
+                        <p>For tre uker siden snakket Villemo Hatland (14) om mobbing foran flere tusen mennesker. Nå blir hun kalt en løgner i sosiale medier.</p>
+                        <a href="https://www.vg.no/nyheter/innenriks/i/0mpgJ/villemo-sto-frem-som-mobbeoffer-naa-blir-hun-hetset-paa-nettet" target="_">Les mer her.</a>
                     </div>
                 </div>
             </div>
