--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                 2018 er det 27 000 elever som opplever nettmobbing. Nettmobbingen skjer ikke utelukkende på sosiale
                 medier, men også når barn og unge spiller sammen. </p>
 
+            <h2> Mobbing er ulovlig </h2>
+
+            <p> Nettmobbing er slik som all annen mobbing ulovlig. Mobbing på nett kan rammes av straffeloven § 266 om
+                hensynsløs adferd. Denne bestemmelsen sier at: «Den som ved skremmende eller plagsom opptreden eller
+                annen hensynsløs atferd forfølger en person eller på annen måte krenker en annens fred, straffes med bot
+                eller fengsel inntil 2 år.» Blir man mobbet har man rett til å få hjelp til å få en slutt på det. Hvis
+                skolen får vite om mobbing er de pliktige til å få en slutt på mobbingen i følge opplæringslovens §9a.
+                Dermed anbefales det på det sterkeste å si i fra til en voksen eller en lærer dersom man blir utsatt for
+                mobbing. </p>
+
         </section>
 
         <section id="tuttifrutti">
