--- a/erika_prover.html
+++ b/erika_prover.html
@@ -98,7 +98,7 @@
         }
         
         .mobbeoffer a {
-            color: blue;
+            color: green;
             text-decoration: none;
         }
 
