--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -22,6 +22,7 @@
     <main>
         <section>
             <h1> UNIVERSIELL UTFORMING </h1>
+            <button onclick="myFunction()">Lys/Mørk</button>
             <h2> Hva er universiell utforming? </h2>
             <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
                 tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
@@ -93,6 +94,7 @@
 
     </footer>
 
+    <script src="uu.js"></script>
 
 </body>
 
