--- a/erika_prover.html
+++ b/erika_prover.html
@@ -98,12 +98,17 @@
         }
         
         .mobbeoffer a {
-            color: green;
+            color: greenyellow;
             text-decoration: none;
+        }
+
+        .mobbeoffer a:hover {
+            color: green;
         }
 
         .Guri {
             background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/ece5/tr_2000_2000_s_f/0000/tele/2020/10/12/17/13NYH_01-01-DSC_0599.jpg?chk=A8F5B0);
+            padding: 50px 700px 400px 150px;
         }
 
         .jente {
@@ -113,6 +118,17 @@
         .Villemo {
             background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/escenic/tr_2000_2000_s_f/0000/archive/05746/ashighaiodhguoi_s_5746354a.jpg?chk=636FC0);
             color: white;
+        }
+
+        .Amanda {
+            background-image: url(https://imaginary.abcmedia.no/resize?force=false&width=1366&aspectratio=16:9&nocrop=false&interlace=true&url=https%3A%2F%2Fabcnyheter.drpublish.aptoma.no%2Fout%2Fimages%2Farticle%2F%2F2012%2F10%2F13%2F195126410%2F1%2Foriginal%2F2208778.jpg);
+            padding: 10px 100px 350px 820px;
+        }
+
+        .svenskjente {
+            background-image: url(https://akamai.vgc.no/v2/images/5d327971-db44-4590-ba7d-65a67f6099d3?format=auto&w=720&s=d9eb65fd2fdb17df0a3b3697752563e6df720a76);
+            color: white;
+            background-position: bottom;
         }
     </style>
 </head>
@@ -144,6 +160,20 @@
                         <h2>Villemo (14) hetses etter at hun sto fram som mobbeoffer</h2>
                         <p>For tre uker siden snakket Villemo Hatland (14) om mobbing foran flere tusen mennesker. Nå blir hun kalt en løgner i sosiale medier.</p>
                         <a href="https://www.vg.no/nyheter/innenriks/i/0mpgJ/villemo-sto-frem-som-mobbeoffer-naa-blir-hun-hetset-paa-nettet" target="_">Les mer her.</a>
+                    </div>
+                </div>
+                <div class="slide-image">
+                    <div class="mobbeoffer Amanda">
+                        <h2>Funnet død etter nettmobbing - nå skal de ta bakpersonen</h2>
+                        <p>Politiet setter inn store ressurser for å ta mobberne etter at Amanda (15) tok sitt eget liv.</p>
+                        <a href="https://www.nettavisen.no/nyheter/funnet-dod-etter-nettmobbing-na-skal-de-ta-bakpersonen/s/12-95-3492718" target="_">Les mer her.</a>
+                    </div>
+                </div>
+                <div class="slide-image">
+                    <div class="mobbeoffer svenskjente">
+                        <h2>Tror 13-åring tok sitt eget liv etter grov nettmobbing</h2>
+                        <p>Svensk politi mistenker at trakassering og trusler ligger bak dødsfallet til en 13 år gammel jente.</p>
+                        <a href="https://www.vg.no/nyheter/utenriks/i/49w36/tror-13-aaring-tok-sitt-eget-liv-etter-grov-nettmobbing" target="_">Les mer her.</a>
                     </div>
                 </div>
             </div>
