--- a/index.html
+++ b/index.html
@@ -60,17 +60,38 @@
 
     <main>
         <section id="nettmobbing">
-            <h2> Nettmobbing </h2>
+            <div>
+                <h2> Nettmobbing </h2>
 
-            <p> Siden store deler av livet til barn og unge utspiller seg på nett er nettmobbing blitt et økende
-                problem. Med nettmobbing er ikke mobbingen lenger begrenset til skolegården, men kan foregå døgnet
-                rundt. Ofte kan det også være lettere å mobbe når man ikke står ansikt til ansikt, men kan gjemme seg
-                bak et brukernavn eller være anonym. Konflikter skalerer også raskere på nett. Det er lett å misforstå
-                hverandre, og meldinger og bilder kan bli spredt til mange fort. Nettmobbingen utarter seg ofte i form
-                av trusler, utestenging, hetsing eller deling av intime bilder på nett. I følge elevundersøkelsen fra
-                2018 er det 27 000 elever som opplever nettmobbing. Nettmobbingen skjer ikke utelukkende på sosiale
-                medier, men også når barn og unge spiller sammen. </p>
+                <p> Siden store deler av livet til barn og unge utspiller seg på nett er nettmobbing blitt et økende
+                    problem. Med nettmobbing er ikke mobbingen lenger begrenset til skolegården, men kan foregå døgnet
+                    rundt. Ofte kan det også være lettere å mobbe når man ikke står ansikt til ansikt, men kan gjemme
+                    seg
+                    bak et brukernavn eller være anonym. Konflikter skalerer også raskere på nett. Det er lett å
+                    misforstå
+                    hverandre, og meldinger og bilder kan bli spredt til mange fort. Nettmobbingen utarter seg ofte i
+                    form
+                    av trusler, utestenging, hetsing eller deling av intime bilder på nett. I følge elevundersøkelsen
+                    fra
+                    2018 er det 27 000 elever som opplever nettmobbing. Nettmobbingen skjer ikke utelukkende på sosiale
+                    medier, men også når barn og unge spiller sammen. </p>
 
+            </div>
+
+            <div>
+                <h2> 28%</h2>
+                <p> i alderen 9-18 år har opplevd at noen har vært slemme eller mobbet dem på internett, spill eller
+                    mobil
+                </p>
+            </div>
+
+            <div>
+                <h2> 38% </h2>
+                <p> av barn og unge i alderen 9-18 år har vært utsatt for en eller annen form for utestengning på nett
+                </p>
+            </div>
+
+            <div>
             <h2> Mobbing er ulovlig </h2>
 
             <p> Nettmobbing er slik som all annen mobbing ulovlig. Mobbing på nett kan rammes av straffeloven § 266 om
@@ -80,7 +101,7 @@
                 skolen får vite om mobbing er de pliktige til å få en slutt på mobbingen i følge opplæringslovens §9a.
                 Dermed anbefales det på det sterkeste å si i fra til en voksen eller en lærer dersom man blir utsatt for
                 mobbing. </p>
-
+            </div>
         </section>
 
         <section id="tuttifrutti">
