--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                 Dermed anbefales det på det sterkeste å si i fra til en voksen eller en lærer dersom man blir utsatt for
                 mobbing. </p>
             </div>
+
+            <div>
+                <h2> Nyttige ressurser</h2>
+                
+            </div>
         </section>
 
         <section id="tuttifrutti">
