små endringer uu

--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -39,7 +39,7 @@
                 <p> For svaksynte er det viktig at nettsiden er oversiktlig med tydelige overskrifter og fordelinger. En
                     tilpasning på nettsider som gjøres for de blinde er å sette inne en "alt"-tagg. Dette innebærer at
                     de
-                    som får lest opp sidene kan se for seg hvordan bilde ser ut.
+                    som får lest opp sidene kan se for seg hvordan bildet ser ut.
 
                     For de som er fargeblinde kan det være vanskelig å se forskjeller på ulike farger. Det er
                     vanskeligere å
@@ -59,7 +59,7 @@
                     på
                     siden og teksten bør ikke begge ha samme type farge. Det vil si at en hvit bakgunn ikke burde ha en
                     lys
-                    beige farge. Hvis fargene har like nyanser og ikke skiller mellom lys og mørkt, blir det
+                    beige farget skrift. Hvis fargene har like nyanser og ikke skiller mellom lys og mørkt, blir det
                     vanskeligere å
                     se hva som står på siden.
 
