--- a/erika_prover.html
+++ b/erika_prover.html
@@ -17,12 +17,13 @@
             font-weight: 900;
         }
 
-        .wrapper {
-            width: 100%;
+        .slideshow_container {
+            width: 1250px;
             overflow: hidden;
+            margin: auto;
         }
 
-        .slides-container {
+        .slides_container {
             height: 530px;
             transition: 900ms cubic-bezier(0.48, 0.15, 0.18, 1);
             position: relative;
@@ -105,7 +106,7 @@
             padding: 50px 700px 400px 150px;
         }
 
-        .jente {
+        .norskjente {
             background-image: url(https://g.acdn.no/obscura/API/dynamic/r1/ece5/tr_2000_2000_s_f/0000/helg/2015/9/15/12/1442312358820.jpg?chk=43D8DF);
         }
 
@@ -116,7 +117,7 @@
 
         .Amanda {
             background-image: url(https://imaginary.abcmedia.no/resize?force=false&width=1366&aspectratio=16:9&nocrop=false&interlace=true&url=https%3A%2F%2Fabcnyheter.drpublish.aptoma.no%2Fout%2Fimages%2Farticle%2F%2F2012%2F10%2F13%2F195126410%2F1%2Foriginal%2F2208778.jpg);
-            padding: 10px 100px 350px 820px;
+            padding: 10px 100px 370px 820px;
         }
 
         .svenskjente {
@@ -129,11 +130,11 @@
 
 <body>
     <h1>SoME - Sosiale medier</h1>
-    <section id="story">
-        <div class="wrapper">
+    <section id="slideshow_m_historier">
+        <div class="slideshow_container">
             <div class="tilbake_knapp"><i class="fas fa-chevron-left"></i></div>
 
-            <div class="slides-container">
+            <div class="slides_container">
                 <div class="slide">
                     <div class="mobbeoffer Guri">
                         <h2>Mobbeofferet «Guri» (24) forteller sin historie: Ber politikerne ta seg råd til å etablere et mobbeteam</h2>
@@ -142,7 +143,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <div class="mobbeoffer jente">
+                    <div class="mobbeoffer norskjente">
                         <h2>14-åring ble mobbet på Snapchat - Håper jeg får hjelp nå</h2>
                         <p>Utfrysing og nettmobbing har lenge vært en del av hverdagen for 14-åringen fra Sandnessjøen. Nå vil hun ha hjelp.</p>
                         <p>– Det kan ikke bli verre enn det er.</p>
@@ -180,7 +181,7 @@
 
     <script>
         const slideImage = document.querySelectorAll(".slide");
-        const slidesContainer = document.querySelector(".slides-container");
+        const slidesContainer = document.querySelector(".slides_container");
         const neste_knapp = document.querySelector(".neste_knapp");
         const tilbake_knapp = document.querySelector(".tilbake_knapp");
         const navigasjonsPrikker = document.querySelector(".navigasjonsprikker");
@@ -191,7 +192,7 @@
 
         // Set up the slider
 
-        function init() {
+        function startFunksjon() {
             /*   
               slideImage[0] = 0
               slideImage[1] = 100%
@@ -207,7 +208,7 @@
             lagNavigasjonsPrikker();
         }
 
-        init();
+        startFunksjon();
 
         // Create navigation dots
 
