--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
             </div>
 
-            <div>
+            <div class="statestikk">
                 <h2> 28%</h2>
                 <p> i alderen 9-18 år har opplevd at noen har vært slemme eller mobbet dem på internett, spill eller
                     mobil
                 </p>
             </div>
 
-            <div>
+            <div class="statestikk">
                 <h2> 38% </h2>
                 <p> av barn og unge i alderen 9-18 år har vært utsatt for en eller annen form for utestengning på nett
                 </p>
@@ -105,7 +105,7 @@
 
             <div>
                 <h2> Nyttige ressurser</h2>
-                
+
             </div>
         </section>
 
