--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-                <p><a href="index.html">SoMe</a></p>
+                <p><i class="fa-solid fa-mobile-screen-button"></i><a href="index.html">SoMe</a></p>
             </div>
             <div class="right-sections">
                 <ul>
