små endringer slideshow

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <h2>14-åring ble mobbet på Snapchat - Håper jeg får hjelp nå</h2>
                         <p>Utfrysing og nettmobbing har lenge vært en del av hverdagen for 14-åringen fra Sandnessjøen.
                             Nå vil hun ha hjelp.</p>
-                        <p>– Det kan ikke bli verre enn det er.</p>
+                        <p>- Det kan ikke bli verre enn det er.</p>
                         <a href="https://www.helg.no/nyheter/mobbing/14-aring-ble-mobbet-pa-snapchat-haper-jeg-far-hjelp-na/s/5-24-68194"
                             target="_">Les mer her.</a>
                     </div>
