--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header>
         <nav>
             <div class="logo">
-                <p><i class="fa-solid fa-mobile-screen-button"></i><a href="index.html">SoMe</a></p>
+                <p>
+  
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a></p>
             </div>
             <div class="right-sections">
                 <ul>
