--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li><a href="universiell_utforming.html">Universell utforming</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
                     <li><a href="#">Spill</a></li>
+                    <li><a href="#">Om oss</a></li>
                 </ul>
             </div>
         </nav>
