--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -34,7 +34,7 @@
 
 
         <section class="boks" id="syn">
-            <div>
+            <div class="bredde_container">
                 <h3> Syn </h3>
                 <p> For svaksynte er det viktig at nettsiden er oversiktlig med tydelige overskrifter og fordelinger. En
                     tilpasning på nettsider som gjøres for de blinde er å sette inne en "alt"-tagg. Dette innebærer at
@@ -47,7 +47,15 @@
                     fargeblinde ikke klarer å skille resultatene grafen prøver å vise.
                 </p>
             </div>
-            <div> <i class="fa-solid fa-eye"></i> </div>
+            <div id="card">
+                <div class="foran">
+                    <i class="fa-solid fa-eye"></i>
+                    <h5> Trykk på ikonet for å se hva som ville stått dersom bildet ikke blir vist </h5>
+                </div>
+                <div class="bak">
+                    <h4> Et ikon av et øye som er blått </h4>
+                </div>
+            </div>
 
 
         </section>
